objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeScan_Org_Id__c</fullName>
        <externalId>true</externalId>
        <label>CodeScan Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountGiven__c</fullName>
        <formula>1- ( UnitPrice / PricebookEntry.UnitPrice )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Given (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Given__c</fullName>
        <label>Discount Given %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Syncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_PS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a Service ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this item recurring on annually and should therefore be under the recurring subtotal on a quote?</description>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Quantity*Sale Price*number of months</description>
        <formula>if( OR(of_Months__c =0,ISBLANK(of_Months__c)) ,  Quantity* UnitPrice  ,  Quantity* UnitPrice*of_Months__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity*Sale Price*number of months</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>Quantity* PricebookEntry.UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Created this field to show on the Quote Template. Becasue field name could not be renamed from &apos;Sales price&apos; to Unit Price on the quote template.</description>
        <formula>UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales price</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Months__c</fullName>
        <defaultValue>12</defaultValue>
        <label># of Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Add_Or_Edit_Restrcited_Access_Products</fullName>
        <active>true</active>
        <description>Only authorized users (Bob K and Jessica N) are allowed to add/edit the products listed under the &apos;Professional Services - Restricted&apos; Product Family.</description>
        <errorConditionFormula>AND
(
NOT($Permission.Permission_to_add_update_restricted_access_products), ISPICKVAL( Product2.Family , &apos;Professional Services - Restricted&apos;)
)</errorConditionFormula>
        <errorMessage>You are not authorized to add/edit this product, please reach ServicesRequests@autorabit.com for assistance.</errorMessage>
    </validationRules>
</CustomObject>